--- a/TapasTop/app/build.gradle
+++ b/TapasTop/app/build.gradle
@@ -47,5 +47,10 @@ dependencies {
     // Kotlin
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.2")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.2")
+    //Circular ImageView
+    implementation 'com.mikhaellopez:circularimageview:4.3.1'
+    //Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
 }
