--- a/TapasTop/app/build.gradle
+++ b/TapasTop/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -51,6 +52,8 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:4.3.1'
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
 }
