--- a/TapasTop/app/build.gradle
+++ b/TapasTop/app/build.gradle
@@ -55,9 +55,11 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
-
     //Lottie
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
-
+    //Retrofit with Moshi
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    //Moshi
+    implementation("com.squareup.moshi:moshi-kotlin:1.14.0")
 }
