--- a/TapasTop/app/build.gradle
+++ b/TapasTop/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     //Lottie
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     //Retrofit with Moshi
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     //Moshi
